Added get total revenue endpoint to api.
