# back-end/microservice-orm-example/docs/swagger_output.json
@@ -1,13 +1,13 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "REST API Example",
+    "description": "An example REST API that connects to a PostgreSQL Database.",
+    "version": "1.0.0"
   },
   "servers": [
     {
-      "url": "http://localhost:3000/"
+      "url": "http://localhost:3001/v1"
     }
   ],
   "paths": {
@@ -163,6 +163,16 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/revenue/total": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
